# platform.core.multimedia.libmedia-service

./: AUTHORS  CMakeLists.txt  LICENSE  NOTICE  libmedia-service.pc.in  license
TC/: _export_env.sh  tet_scen  tslist.txt
TC/utc/audio/: Makefile  tslist  utc_audio_svc_add_item_to_playlist_func.c  utc_audio_svc_add_item_to_playlist_func.h  utc_audio_svc_add_playlist_func.c  utc_audio_svc_add_playlist_func.h  utc_audio_svc_check_duplicate_insertion_in_playlist_func.c  utc_audio_svc_check_duplicate_insertion_in_playlist_func.h  utc_audio_svc_check_item_exist_func.c  utc_audio_svc_check_item_exist_func.h  utc_audio_svc_close_func.c  utc_audio_svc_close_func.h  utc_audio_svc_common.c  utc_audio_svc_common.h  utc_audio_svc_count_group_item_func.c  utc_audio_svc_count_group_item_func.h  utc_audio_svc_count_list_item_func.c  utc_audio_svc_count_list_item_func.h  utc_audio_svc_count_playlist_by_name_func.c  utc_audio_svc_count_playlist_by_name_func.h  utc_audio_svc_count_playlist_func.c  utc_audio_svc_count_playlist_func.h  utc_audio_svc_create_table_func.c  utc_audio_svc_create_table_func.h  utc_audio_svc_delete_all_func.c  utc_audio_svc_delete_all_func.h  utc_audio_svc_delete_invalid_items_func.c  utc_audio_svc_delete_invalid_items_func.h  utc_audio_svc_delete_item_by_path_func.c  utc_audio_svc_delete_item_by_path_func.h  utc_audio_svc_delete_playlist_func.c  utc_audio_svc_delete_playlist_func.h  utc_audio_svc_get_group_item_func.c  utc_audio_svc_get_group_item_func.h  utc_audio_svc_get_item_by_audio_id_func.c  utc_audio_svc_get_item_by_audio_id_func.h  utc_audio_svc_get_item_by_path_func.c  utc_audio_svc_get_item_by_path_func.h  utc_audio_svc_get_list_item_func.c  utc_audio_svc_get_list_item_func.h  (+50 more)
TC/utc/visual/: Makefile  tslist  utc_minfo_add_bookmark_func.c  utc_minfo_add_bookmark_func.h  utc_minfo_add_cluster_func.c  utc_minfo_add_cluster_func.h  utc_minfo_add_media_func.c  utc_minfo_add_media_func.h  utc_minfo_bookmark_func.c  utc_minfo_bookmark_func.h  utc_minfo_cluster_func.c  utc_minfo_cluster_func.h  utc_minfo_copy_media_func.c  utc_minfo_copy_media_func.h  utc_minfo_cp_media_func.c  utc_minfo_cp_media_func.h  utc_minfo_delete_bookmark_func.c  utc_minfo_delete_bookmark_func.h  utc_minfo_delete_cluster_func.c  utc_minfo_delete_cluster_func.h  utc_minfo_delete_invalid_media_records_func.c  utc_minfo_delete_invalid_media_records_func.h  utc_minfo_delete_media_func.c  utc_minfo_delete_media_func.h  utc_minfo_delete_media_id_func.c  utc_minfo_delete_media_id_func.h  utc_minfo_destroy_mtype_item_func.c  utc_minfo_destroy_mtype_item_func.h  utc_minfo_finalize_func.c  utc_minfo_finalize_func.h  utc_minfo_get_all_item_list_func.c  utc_minfo_get_all_item_list_func.h  utc_minfo_get_bookmark_list_func.c  utc_minfo_get_bookmark_list_func.h  utc_minfo_get_cluster_cnt_func.c  utc_minfo_get_cluster_cnt_func.h  utc_minfo_get_cluster_cover_func.c  utc_minfo_get_cluster_cover_func.h  utc_minfo_get_cluster_fullpath_by_id_func.c  utc_minfo_get_cluster_fullpath_by_id_func.h  (+55 more)
debian/: changelog  control  copyright  rules
include/: SLP_AudioSvc_PG.h  SLP_MediaSvc_PG.h  audio-svc-error.h  audio-svc-types.h  audio-svc.h  media-info-error.h  media-info-types.h  media-info.h  media-svc-error.h  media-svc-types.h  media-svc.h  minfo-api.h  minfo-types.h  visual-svc-error.h  visual-svc-types.h  visual-svc.h
md5/: md5.c  md5.h  media-svc-hash.c  media-svc-hash.h
packaging/: libmedia-service.changes  libmedia-service.spec
plugin/: media-content-plugin.c  media-svc-plugin.c
src/audio/: audio-svc-db-utils.c  audio-svc-music-table.c  audio-svc-playlist-table.c  audio-svc-ta.c  audio-svc-utils.c  audio-svc.c
src/common/: media-info-debug.c  media-info-util.c  media-info.c  media-svc-album.c  media-svc-db-utils.c  media-svc-debug.c  media-svc-localize-utils.c  media-svc-localize_ch.c  media-svc-localize_tw.c  media-svc-media-folder.c  media-svc-media.c  media-svc-noti.c  media-svc-storage.c  media-svc-storage.h  media-svc-util.c  media-svc.c
src/include/audio/: audio-svc-db-utils.h  audio-svc-debug.h  audio-svc-music-table.h  audio-svc-playlist-table.h  audio-svc-ta.h  audio-svc-types-priv.h  audio-svc-utils.h  md5_hash.h
src/include/common/: media-info-debug.h  media-info-env.h  media-info-util.h  media-svc-album.h  media-svc-db-utils.h  media-svc-debug.h  media-svc-env.h  media-svc-localize-utils.h  media-svc-localize_ch.h  media-svc-localize_tw.h  media-svc-media-folder.h  media-svc-media.h  media-svc-noti.h  media-svc-storage.h  media-svc-util.h
src/include/visual/: AGifFrameInfo.h  IfegDecodeAGIF.h  media-img-codec-agif.h  media-img-codec-common.h  media-img-codec-config.h  media-img-codec-osal.h  media-img-codec-parser.h  media-img-codec.h  media-svc-api.h  media-svc-db-util.h  media-svc-db.h  media-svc-debug.h  media-svc-structures.h  media-svc-thumb.h  minfo-bookmark.h  minfo-cluster.h  minfo-item.h  minfo-meta.h  minfo-streaming.h  minfo-tag.h  visual-svc-db-util.h  visual-svc-db.h  visual-svc-debug.h  visual-svc-util.h
src/visual/: IfegDecodeAGIF.c  media-img-codec-osal.c  media-img-codec-parser.c  media-img-codec.c  media-svc-api.c  media-svc-db-util.c  media-svc-db.c  media-svc-thumb.c  media-svc-util.c  minfo-api.c  minfo-bookmark.c  minfo-cluster.c  minfo-item.c  minfo-meta.c  minfo-streaming.c  minfo-tag.c  visual-svc-db-util.c  visual-svc-db.c  visual-svc-util.c
test/: CMakeLists.txt  media-service-test.c  test_media_info.c  test_visual.c
test/audio/: Makefile  audio_svc_test.c
test/plugin/: Makefile  media_svc_plugin_test.c
uuid/: COPYING  gen_uuid.c  uuidP.h  uuid_types.h
